Add source link

--- a/src/components/Toolbox.module.css
+++ b/src/components/Toolbox.module.css
@@ -7,4 +7,10 @@
 .toolbox p {
   font-size: 0.9em;
   color: gray;
+  margin-bottom: 0;
+}
+
+.toolbox a {
+  font-size: 0.9em;
+  color: #abb8c3;
 }
